Fix Raw XACML Decision API Serialization
Issue-ID: POLICY-4274
Signed-off-by: dc443y <dc443y@att.com>
Change-Id: I0d367d35e7ec52c7587ec75194b654cc41303868
Signed-off-by: dc443y <dc443y@att.com>